--- a/lang/fr.json
+++ b/lang/fr.json
@@ -129,8 +129,8 @@
     "SWADETOOLS.NoDmgActionDefined": "Il n'y a aucun dégâts défini dans l'action de l'objet. Les dégâts par défaut ont été utilisés (si défini).",
     "SWADETOOLS.UseSkillSelected": "Utiliser la compétence",
     "SWADETOOLS.NoSkillQuestion": "n'a pas de compétence. Voulez vous en utiliser une ?",
-    "SWADETOOLS.RangedInMelee":"Armes de tir en Mélée : utilisez Parade",
-    "SWADETOOLS.IsVulnerable":"est Vunérable",
+    "SWADETOOLS.RangedInMelee":"Armes de tir en mêlée : utilisez Parade",
+    "SWADETOOLS.IsVulnerable":"est Vulnérable",
     "SWADETOOLS.SeeSituational":"Voir les modificateurs de situation",
     "SWADETOOLS.gangUpBonus":"Bonus d'attaque à plusieurs",
     "SWADETOOLS.TargetTooFar":"La cible est hors de portée extrême",
@@ -146,26 +146,26 @@
     "SWADETOOLS.FormationFighterSetting": "Combat en Formation",
     "SWADETOOLS.SettingShowSituational": "Toujours montrer les modificateurs de situation pour la cible",
     "SWADETOOLS.SettingShowSituationalHint": "Avec cette option, les modificateurs de cible sont toujours visibles, pas besoin de cliquer sur (?)",
-    "SWADETOOLS.settingCustom": "Customisation",
-    "SWADETOOLS.settingCustomButton": "CUstomiser le module",
+    "SWADETOOLS.settingCustom": "Personnalisation",
+    "SWADETOOLS.settingCustomButton": "Personnaliser le module",
     "SWADETOOLS.settingCustomHint": "Modifier les paramètres par défaut de SWADE Tools.",
-    "SWADETOOLS.StatusIconsSetting":"Utiliser les icones de status",
+    "SWADETOOLS.StatusIconsSetting":"Utiliser les icônes de status",
     "SWADETOOLS.StatusIconsSettingHint":"Utilise les icones de status du système ou les désactive.",
     "SWADETOOLS.StatusIconsSettingDefault":"SWADE Tools",
     "SWADETOOLS.StatusIconsSettingSystem":"système SWADE",
     "SWADETOOLS.StatusIconsSettingNone":"Désactiver",
     "SWADETOOLS.SettingNoAutoRoll":"Désactiver les jets automatiques lors de combat",
-    "SWADETOOLS.SettingNoAutoRollHint":"(Nécessite un rechargement) Cette option désactive les jets automatique pour les états Secoué durant les combats.",
+    "SWADETOOLS.SettingNoAutoRollHint":"(Nécessite un rechargement) Cette option désactive les jets automatiques pour les états Secoué durant les combats.",
     "SWADETOOLS.sayIsShaken": "est Secoué",
-    "SWADETOOLS.sayIsStunned": "is Stunned",
+    "SWADETOOLS.sayIsStunned": "est Sonné",
     "SWADETOOLS.Scale": "Echelle",
-    "SWADETOOLS.SettinguseScale": "Utiliser l'echelle",
-    "SWADETOOLS.SettinguseScaleHint": "Calcule les modificateyrs d'echelles lors des attaques. Les créatures avec Essaim (capacité spéciale) afficheront une fenêtre de dialogue lors de leurs attaques",
+    "SWADETOOLS.SettinguseScale": "Utiliser l'échelle",
+    "SWADETOOLS.SettinguseScaleHint": "Calcule les modificateurs d'échelles lors des attaques. Les créatures avec Essaim (capacité spéciale) afficheront une fenêtre de dialogue lors de leurs attaques",
     "SWADETOOLS.SwatSetting": "Essaim",
     "SWADETOOLS.SettingreloadX": "Afficher le bouton de Rechargement X",
     "SWADETOOLS.SettingreloadXHint": "Afficher un bouton pour recharger une quantité spécifique de balles au lieu d'un rechargement complet.",
     "SWADETOOLS.SituationalRules": "Règles de situation",
-    "SWADETOOLS.Customization": "Customisation",
+    "SWADETOOLS.Customization": "Personnalisation",
     "SWADETOOLS.RulesSettings": "Règles d'univers",
     "SWADETOOLS.bullets": "tirs",
     "SWADETOOLS.SettingsSimpleRolls":"Jets de traits simples",
@@ -185,15 +185,15 @@
     "SWADETOOLS.SettingWildAttackSkillsHint": "La liste des compétences possibles pour une Attaque Totale, séparée par des virgules. Ex: Combat, Athlétisme, Tir",
     "SWADETOOLS.SettingAskCalledShots": "Options d'Attaques Ciblées pour les objets",
     "SWADETOOLS.SettingAskCalledShotsHint": "Cette option affiche une liste de sélection pour les attaques ciblées",
-    "SWADETOOLS.CalledShot": "Attaque Aiblée",
+    "SWADETOOLS.CalledShot": "Attaque Ciblée",
     "SWADETOOLS.CalledShotHint": "Les pénalités sont ajoutées automatiquement, ajoutez les modificateurs supplémentairs manuellement. Un tir à la tête fournit +4 dommages.",
     "SWADETOOLS.YesButPC": "Oui, mais seulement pour les PJs",
     "SWADETOOLS.NoTokenSelected": "Aucun token selectionné",
     "SWADETOOLS.OtherUnskilled": "Autre (Incompétent)",
     "SWADETOOLS.Shooting": "Tir",
-    "SWADETOOLS.RapidFireSetting": "Tir Rapide",
+    "SWADETOOLS.RapidFireSetting": "Tir rapide",
     "SWADETOOLS.SettingShootingHint": "Compétence à utiliser pour les Atouts de Tir.",
-    "SWADETOOLS.DieSteps": "Etapes de décés",
+    "SWADETOOLS.DieSteps": "Etapes de décès",
     "SWADETOOLS.Rounds": "rounds",
     "SWADETOOLS.NotBelowd4": "pas de trait en dessous de d4",
     "SWADETOOLS.BoostLowerHint": "Utiliser un nombre négatif pour diminuer le trait",
