--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -202,7 +202,8 @@
     "SWADETOOLS.BoostSkill": "será adicionada com um marcador [Aumentar] para",
     "SWADETOOLS.LowerSkillIgnored": "será ignorado para",
     "SWADETOOLS.NoSkill": "não tem a perícia",
-    "SWADETOOLS.DeleteManually": "Delete Manualmente"
+    "SWADETOOLS.DeleteManually": "Delete Manualmente",
+    "SWADETOOLS.LeaveItBlank": "Deixar em branco"
    
 
 
