--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -203,7 +203,8 @@
     "SWADETOOLS.LowerSkillIgnored": "será ignorado para",
     "SWADETOOLS.NoSkill": "não tem a perícia",
     "SWADETOOLS.DeleteManually": "Delete Manualmente",
-    "SWADETOOLS.LeaveItBlank": "Deixar em branco"
+    "SWADETOOLS.LeaveItBlank": "Deixar em branco",
+    "SWADETOOLS.UnderMinStr": "Abaixo da For. Mín."
    
 
 
