--- a/lang/en.json
+++ b/lang/en.json
@@ -212,7 +212,12 @@
     "SWADETOOLS.SelectModifiersHint": "Shows a pre-defined selection of modifiers for Multi-Action, Cover and Illumination",
     "SWADETOOLS.IgnoreRange": "Disable automatic modifiers for Range",
     "SWADETOOLS.Debugger": "Debugger",
-    "SWADETOOLS.DebuggerHint": "Enable only for troubleshooting purposes"
+    "SWADETOOLS.DebuggerHint": "Enable only for troubleshooting purposes",
+    "SWADETOOLS.DesperateAttack": "Desperate Attack",
+    "SWADETOOLS.SettingDesperateAttack": "Enable Desperate Attack",
+    "SWADETOOLS.SettingDesperateAttackHint": "Add a field for Desperate Attack (as in Pathfinder Setting). This field will be shown for the same skills defined for Wild Attack",
+    "SWADETOOLS.Skill": "Skill",
+    "SWADETOOLS.HeavyArmorWarn": "Target has Heavy Armor, only affected by Heavy Weapon"
     
     
     
