--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -217,7 +217,8 @@
     "SWADETOOLS.SettingDesperateAttack": "Habilitar Ataque Desesperado",
     "SWADETOOLS.SettingDesperateAttackHint": "Adiciona um campo para Ataque Desesperado (como no cenário Pathfinder). Este campo irá ser exibido para as mesmas perícias definidas para Ataque Selvagem",
     "SWADETOOLS.Skill": "Perícia",
-    "SWADETOOLS.HeavyArmorWarn": "Alvo tem Armadura Pesada, só é afetado por Arma Pesada"
+    "SWADETOOLS.HeavyArmorWarn": "Alvo tem Armadura Pesada, só é afetado por Arma Pesada",
+    "SWADETOOLSArcaneDevicePPHint": "O custo total em PP para ativar o dispositivo"
    
 
 
