--- a/lang/en.json
+++ b/lang/en.json
@@ -217,7 +217,8 @@
     "SWADETOOLS.SettingDesperateAttack": "Enable Desperate Attack",
     "SWADETOOLS.SettingDesperateAttackHint": "Add a field for Desperate Attack (as in Pathfinder Setting). This field will be shown for the same skills defined for Wild Attack",
     "SWADETOOLS.Skill": "Skill",
-    "SWADETOOLS.HeavyArmorWarn": "Target has Heavy Armor, only affected by Heavy Weapon"
+    "SWADETOOLS.HeavyArmorWarn": "Target has Heavy Armor, only affected by Heavy Weapon",
+    "SWADETOOLSArcaneDevicePPHint": "The full cost in PP to activate the device"
     
     
     
