--- a/lang/fr.json
+++ b/lang/fr.json
@@ -202,5 +202,27 @@
     "SWADETOOLS.BoostSkill": "sera ajouté avec un marqueur de [Boost] pour",
     "SWADETOOLS.LowerSkillIgnored": "sera ignoré pour",
     "SWADETOOLS.NoSkill": "ne possède pas la compétence",
-    "SWADETOOLS.DeleteManually": "Supprimer manuellement"
+    "SWADETOOLS.DeleteManually": "Supprimer manuellement",
+    "SWADETOOLS.LeaveItBlank": "Laisser vide",
+    "SWADETOOLS.UnderMinStr": "Sous la force minimum",
+    "SWADETOOLS.SelectModifiers": "Afficher les autres modificateurs prédéfinis",
+    "SWADETOOLS.SelectModifiersHint": "Affiche une liste de modificateurs pré-définis pour les actions multiples, le couvert, et la luminoisté",
+    "SWADETOOLS.IgnoreRange": "Désactiver les modificateurs automatiques pour la portée",
+    "SWADETOOLS.Debugger": "Débugueur",
+    "SWADETOOLS.DebuggerHint": "A n'activer que pour des besoins de debug",
+    "SWADETOOLS.DesperateAttack": "Attaque désespérée",
+    "SWADETOOLS.SettingDesperateAttack": "Activer l'Attaque désespérée",
+    "SWADETOOLS.SettingDesperateAttackHint": "Ajoute in champ pour les Attaques Désespérées (comme dans l'univers Pathfinder). Ce champe sera seulement affiché pour la compétence définie pour les Attaques Sauvages",
+    "SWADETOOLS.Skill": "Compétence",
+    "SWADETOOLS.HeavyArmorWarn": "La cible a une Armure Lourde, seulement affectée par les Armes Lourdes",
+    "SWADETOOLS.ArcaneDevicePPHint": "Coût total en PP pour activer l'équipement",
+    "SWADETOOLS.SettingnoWoundFatigueIcon":"Ne pas afficher les compteurs de Fatigue/Blessures sur les tokens",
+    "SWADETOOLS.InnatePower":"Pouvoir inné",
+    "SWADETOOLS.PackTacticsSetting": "Pack Tactics",
+    "SWADETOOLS.SettingautoCover": "Utiliser automatiquement le couvert",
+    "SWADETOOLS.SettingautoCoverHint": "Cette option utilisera automatiquement le calcul des pénalités de Couvert pour les boucliers équipés (ou n'importe quel objet avec Couvert) sur les Attaques à Distance.",
+    "SWADETOOLS.SettingonlySystemMod": "Utiliser uniquement les bonu de Secoué défini par le paramétrage de la fiche de personnage.",
+    "SWADETOOLS.SettingonlySystemModHint": "Cochez cette option si vous voulez uniquement utiliser les bonus de la fiche. Cela désactivera la détection automatique des atouts/handicaps associés. ",   
+    "SWADETOOLS.CombatAcrobatSetting": "Acrobate de Combat", 
+    "SWADETOOLS.UnstoppableSetting": "Unstoppable"
 }
