--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -184,8 +184,8 @@
     "SWADETOOLS.Raises":"Ampliações",
     "SWADETOOLS.Failure":"Falha",
     "SWADETOOLS.TargetNumber":"Mudar Número Alvo",
-    "SWADETOOLS.SettingWildAttackSkills": "Perícias a serem usadas com Ataque Selvagem",
-    "SWADETOOLS.SettingWildAttackSkillsHint": "Lista de Perícias que podem utilizar Ataque Selvagem, separadas por vírgula. Por ex: Lutar, Atletismo, Atirar",
+    "SWADETOOLS.SettingWildAttackSkills": "Perícias a serem usadas com Ataque Selvagem/Desesperado",
+    "SWADETOOLS.SettingWildAttackSkillsHint": "Lista de Perícias que podem utilizar Ataque Selvagem/Desesperado, separadas por vírgula. Por ex: Lutar, Atletismo, Atirar",
     "SWADETOOLS.SettingAskCalledShots": "Ataques Localizados para Itens",
     "SWADETOOLS.SettingAskCalledShotsHint": "Essa opção habilita uma opção de Ataque Localizado quando usando itens de ataque",
     "SWADETOOLS.CalledShot": "Ataque Localizado",
@@ -226,7 +226,9 @@
     "SWADETOOLS.SettingautoCoverHint": "Essa opção irá contar a penalidade de Cobertura automaticamente para items equipados (escudos ou outros) para Ataques à Distância. ",
     "SWADETOOLS.SettingonlySystemMod": "Usar apenas os bônus de Absorção e Sair do Abalado definidos pelos ajustes do ator",
     "SWADETOOLS.SettingonlySystemModHint": "Marque essa opção se você quiser usar somente o bonus de Sair do Abalado e Absorção definidos nos ajustes do personagem. Isso irá desabilitar a detecção automática de algumas vantagens e habilidades como: Morto-Vivo, Queixo de Ferro, etc.",
-    "SWADETOOLS.CombatAcrobatSetting": "Combatente Acrobata"      
+    "SWADETOOLS.CombatAcrobatSetting": "Combatente Acrobata",
+    "SWADETOOLS.DesperateWildAttack": "Ataque Selvagem/Desesperado",
+    "SWADETOOLS.ImprovedFrenzySetting": "Frenesi Aprimorado"      
    
 
 
