--- a/lang/en.json
+++ b/lang/en.json
@@ -228,8 +228,10 @@
     "SWADETOOLS.SettingonlySystemModHint": "Check this option if you want to use only the sheet tweak bonus for Unshaken and Soak. This will disable auto-detection of some edges and abilities like: Combat Reflexes, Undead, etc. ",   
     "SWADETOOLS.CombatAcrobatSetting": "Combat Acrobat",
     "SWADETOOLS.DesperateWildAttack": "Desperate/Wild Attack",
-    "SWADETOOLS.ImprovedFrenzySetting": "Improved Frenzy"
-    
+    "SWADETOOLS.ImprovedFrenzySetting": "Improved Frenzy",
+    "SWADETOOLS.SettingsUseGroupRolls": "Show Group Roll option for Extras",
+    "SWADETOOLS.SettingsUseGroupRollsHint": "If this is checked, a Group Roll checkbox will appear for Extras, adding a wild die.",
+    "SWADETOOLS.RiftsUncannyReflexesSetting": "Rifts Uncanny Reflexes"
     
     
      
