--- a/lang/en.json
+++ b/lang/en.json
@@ -231,7 +231,10 @@
     "SWADETOOLS.ImprovedFrenzySetting": "Improved Frenzy",
     "SWADETOOLS.SettingsUseGroupRolls": "Show Group Roll option for Extras",
     "SWADETOOLS.SettingsUseGroupRollsHint": "If this is checked, a Group Roll checkbox will appear for Extras, adding a wild die.",
-    "SWADETOOLS.RiftsUncannyReflexesSetting": "Rifts Uncanny Reflexes"
+    "SWADETOOLS.RiftsUncannyReflexesSetting": "Rifts Uncanny Reflexes",
+    "SWADETOOLS.AceSetting": "Ace",
+    "SWADETOOLS.bloodAndGoreRifts": "Use Blood And Gore (Rifts)",
+    "SWADETOOLS.bloodAndGoreRiftsHint": "If an attacker with Heavy Weapon causes a wound in a opponent without Heavy Armor it'll automatically roll on the Injury Table. You have to define a Injury Table in the system configuration."
     
     
      
