--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -229,6 +229,7 @@
     "SWADETOOLS.CombatAcrobatSetting": "Combatente Acrobata",
     "SWADETOOLS.DesperateWildAttack": "Ataque Selvagem/Desesperado",
     "SWADETOOLS.ImprovedFrenzySetting": "Frenesi Aprimorado" ,  
+    "SWADETOOLS.All-AroundVisionSetting": "Visão de 360°" ,  
     "SWADETOOLS.SettingsUseGroupRolls": "Mostrar opção de Rolagem de Grupo para Extras",
     "SWADETOOLS.SettingsUseGroupRollsHint": "Com essa opção marcada, uma caixa de seleção aparecerá para Rolagem de Grupo se o personagem for um extra, adicionando um dado selvagem.",
     "SWADETOOLS.RiftsUncannyReflexesSetting": "Rifts Uncanny Reflexes", 
